--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,7 +15,12 @@
   },
   "settings": {
     "language": "Language",
-    "general": "General"
+    "general": "General",
+    "bambu": {
+      "title": "Bambu HLS",
+      "path": "Bambu Executable Path",
+      "path_description": "Path to Bambu HLS AppImage or executable"
+    }
   },
   "project": {
     "create_a_new_project": "Let's create a new project!",
@@ -109,7 +114,9 @@
   "sourcefile": {
     "verilog": "Verilog File",
     "systemverilog": "SystemVerilog File",
-    "constraint": "Constraint File"
+    "constraint": "Constraint File",
+    "cpp": "C++ Source File",
+    "c": "C Source File"
   },
   "flow": {
     "settings": "Settings",
@@ -146,6 +153,38 @@
       "yosys": {
         "title": "Synthesis",
         "description": "Perform synthesis using the Yosys tool to generate a logical netlist."
+      },
+      "map": {
+        "title": "Map",
+        "description": "Map the logical netlist to the target device's native language."
+      },
+      "pack": {
+        "title": "Pack",
+        "description": "Pack LUTs into logical blocks."
+      },
+      "place": {
+        "title": "Place",
+        "description": "Place logical Blocks to target devices"
+      },
+      "route": {
+        "title": "Route",
+        "description": "Route the placed netlist on the target device."
+      },
+      "genbit": {
+        "title": "Generate Bitstream",
+        "description": "Generate bitstream file for the target device."
+      }
+    },
+    "bambu": {
+      "hls": {
+        "title": "High-Level Synthesis",
+        "description": "Convert C/C++ code to Verilog using Bambu",
+        "top_function": "Top Function",
+        "clock_period": "Clock Period (ns)"
+      },
+      "synth": {
+        "title": "Synthesis",
+        "description": "Synthesize HLS-generated Verilog using Yosys"
       },
       "map": {
         "title": "Map",
