--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -15,7 +15,12 @@
   },
   "settings": {
     "language": "语言",
-    "general": "通用"
+    "general": "通用",
+    "bambu": {
+      "title": "Bambu HLS",
+      "path": "Bambu 可执行文件路径",
+      "path_description": "Bambu HLS AppImage 或可执行文件的路径"
+    }
   },
   "project": {
     "create_a_new_project": "创建一个新项目吧！",
@@ -109,7 +114,9 @@
   "sourcefile": {
     "verilog": "Verilog 文件",
     "systemverilog": "SystemVerilog 文件",
-    "constraint": "约束文件"
+    "constraint": "约束文件",
+    "cpp": "C++ 源文件",
+    "c": "C 源文件"
   },
   "flow": {
     "settings": "设置",
@@ -146,6 +153,38 @@
       "yosys": {
         "title": "综合",
         "description": "使用 Yosys 工具进行综合，生成逻辑网表"
+      },
+      "map": {
+        "title": "工艺映射",
+        "description": "将逻辑网表映射到目标设备的原语上"
+      },
+      "pack": {
+        "title": "逻辑打包",
+        "description": "将查找表打包至逻辑块中"
+      },
+      "place": {
+        "title": "布局",
+        "description": "将逻辑块布局至目标设备上"
+      },
+      "route": {
+        "title": "布线",
+        "description": "将逻辑块之间的连接布线至目标设备上"
+      },
+      "genbit": {
+        "title": "生成位流",
+        "description": "生成目标设备的位流文件"
+      }
+    },
+    "bambu": {
+      "hls": {
+        "title": "高层次综合",
+        "description": "使用 Bambu 将 C/C++ 代码转换为 Verilog",
+        "top_function": "顶层函数",
+        "clock_period": "时钟周期 (ns)"
+      },
+      "synth": {
+        "title": "综合",
+        "description": "使用 Yosys 工具综合 HLS 生成的 Verilog"
       },
       "map": {
         "title": "工艺映射",
